<resources>
    <string name="app_name">DevSettings</string>
    <!-- 主界面 -->
    <string name="open_close_settings">启用/禁用设置</string>
    <string name="white_black_apps_settings">应用黑/白名单设置</string>
    <string name="network_black_white_settings">网络黑/白名单设置</string>
    <string name="auto_start_settings">自启动设置</string>
    <string name="back_run_settings">后台运行程序设置</string>
    <string name="shut_down">设备关机</string>
    <string name="reboot">设备重启</string>
    <string name="recovery">恢复出厂设置</string>
    <string name="silent_install">静默安装</string>
    <string name="silent_uninstall">静默卸载</string>
    <string name="recovery_confirm_title">确认恢复出厂设置？</string>
    <string name="recovery_confirm_content">此项操作将会清除所有数据</string>
    <!-- 启动禁用界面 -->
    <string name="wlan_forbidden">WLAN禁用</string>
    <string name="wlan_forbidden_sum">wifi功能禁用或开启</string>
    <string name="bluetooth_forbidden">蓝牙禁用</string>
    <string name="bluetooth_forbidden_sum">蓝牙功能禁用或开启</string>
    <string name="sim_forbidden">SIM卡禁用</string>
    <string name="sim_forbidden_sum">SIM卡禁用或开启</string>
    <string name="usbdebug_forbidden">USB调试模式禁用</string>
    <string name="usbdebug_forbidden_sum">USB调试模式禁用或开启</string>
    <string name="charge_only_forbidden">仅充电模式</string>
    <string name="charge_only_forbidden_sum">开启后为仅充电模式，不可以传输文件，关闭后可选文件传输方式</string>
    <string name="gps_forbidden">GPS禁用</string>
    <string name="gps_forbidden_sum">GPS禁用或开启</string>
    <string name="nfc_forbidden">NFC禁用</string>
    <string name="nfc_forbidden_sum">NFC禁用或开启</string>
    <string name="home_forbidden">home键禁用</string>
    <string name="home_forbidden_sum">home键禁用或开启</string>
    <string name="back_forbidden">返回键禁用</string>
    <string name="back_forbidden_sum">返回键禁用或开启</string>
    <string name="recent_forbidden">多任务键禁用</string>
    <string name="recent_forbidden_sum">多任务禁用或开启</string>
    <string name="phone_forbidden">通话功能禁用</string>
    <string name="phone_forbidden_sum">通话功能禁用或开启</string>
    <string name="notification_bar_forbidden">下拉通知栏禁用</string>
    <string name="notification_bar_forbidden_sum">下拉通知栏禁用或开启</string>

    <string-array name="list_option">
        <item>@string/open_close_settings</item>
        <item>@string/white_black_apps_settings</item>
        <item>@string/network_black_white_settings</item>
        <item>@string/auto_start_settings</item>
        <item>@string/back_run_settings</item>
        <item>@string/silent_install</item>
        <item>@string/silent_uninstall</item>
        <item>@string/shut_down</item>
        <item>@string/reboot</item>
        <item>@string/recovery</item>
    </string-array>
    <string name="title_activity_white_black_apps">WhiteBlackAppsActivity</string>
</resources>
